--- a/nanoc.yaml
+++ b/nanoc.yaml
@@ -27,7 +27,7 @@ prune:
   # Which files and directories you want to exclude from pruning. If you version
   # your output directory, you should probably exclude VCS directories such as
   # .git, .svn etc.
-  exclude: [ '.git', '.gitignore', '.gitattributes', 'generator', 'LICENSE.md', 'README.md' ]
+  exclude: [ '.git', '.gitignore', '.gitattributes', 'generator', 'LICENSE.md', 'README.md', 'CNAME' ]
 
 # The data sources where nanoc loads its data from. This is an array of
 # hashes; each array element represents a single data source. By default,
